--- a/AutomationVersion1/TestData.Properties
+++ b/AutomationVersion1/TestData.Properties
@@ -1,5 +1,5 @@
-url = https://www.letskodeit.com/login
+url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 
-usename = tejamarych@gmail.com
+usename = Admin
 
-password = Test@123
+password = admin123
